# solaris

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  main.cpp
include/: Application.hpp  Macros.hpp
include/Core/: Application.hpp
include/Graphics/Vulkan/: Allocator.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  Context.hpp  Device.hpp  DeviceManager.hpp  Frame.hpp  Pipeline.hpp  QueueFamily.hpp  RenderPass.hpp  Shader.hpp  Surface.hpp  SurfaceManager.hpp  SwapChain.hpp  Sync.hpp  Vertex.hpp  VmaBuffer.hpp
include/core/: Application.hpp  DebugMessager.h  DebugMessenger.hpp  InstanceManager.h  InstanceManager.hpp  device_manager.hpp  queue_family.hpp  surface_manager.hpp  vulkan_context.hpp
include/errors/: ApplicationError.hpp  InsanceManagerError.hpp  application_error.hpp  device_manager_error.hpp  surface_manager_error.hpp  vulkan_context.error.hpp  vulkan_context_error.hpp
include/fmt/: formatters.hpp
sandbox/: Cargo.toml
sandbox/src/: main.rs
shaders/: shader.vert
solaris-core/: Cargo.toml
solaris-core/src/: application.rs  lib.rs  winit.rs
solaris-graphics/: Cargo.toml
solaris-graphics/src/: context.rs
solaris-graphics/src/error/: context.rs  mod.rs
src/: Application.cpp  main.cpp
src/Core/: Application.cpp
src/Graphics/Vulkan/: Buffer.cpp  Command.cpp  CommandBuffer.cpp  CommandPool.cpp  Context.cpp  Device.cpp  Frame.cpp  IndexBuffer.cpp  Pipeline.cpp  QueueFamily.cpp  RenderPass.cpp  Shader.cpp  Surface.cpp  SwapChain.cpp  Sync.cpp  Vertex.cpp  VertexBuffer.cpp
src/core/: Application.cpp  DebugMessager.cpp  InstanceManager.cpp  device_manager.cpp  queue_family.cpp  surface_manager.cpp  vulkan_context.cpp
src/core/Graphics/Vulkan/: DeviceManager.cpp  SurfaceManager.cpp
